--- a/vs2017/ssd_sample/ssd_sample/ssd_sample.vcxproj
+++ b/vs2017/ssd_sample/ssd_sample/ssd_sample.vcxproj
@@ -104,17 +104,16 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.1\include;C:\opencv\build\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\opencv\build\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.1/lib/x64;C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.1/lib/x64/$(Configuration);C:\opencv\build\x64\vc15\lib;..\..\..\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\opencv\build\x64\vc15\lib;..\..\..\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>opencv_world343.lib;opencv_world343d.lib;deepeye_predictor_gpu.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
-      <Command>COPY ..\..\..\lib\deepeye_predictor_gpu.dll $(TargetDir)deepeye_predictor_gpu.dll
-COPY ..\..\..\models\ssd_10classes.deep  $(TargetDir)ssd_10classes.deep</Command>
+      <Command>COPY ..\..\..\lib\deepeye_predictor_gpu.dll $(TargetDir)deepeye_predictor_gpu.dll</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
